--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ h1
   border: 10px inset rgb(55,95,55);
   margin: 50px 10px 20px 10px;
 }
+#home-p
+{
+  background-color: rgb(138, 112, 94);
+  font-size: 16pt;
+  font-family: 'Open Sans', sans-serif;
+}
 
 table, th, td
 {
