--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,18 @@ h1
   border: 10px inset rgb(55,95,55);
   margin: 50px 10px 20px 10px;
 }
+h2
+{
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16pt;
+  background-color: rgb(219, 194, 177);
+  padding: 15px;
+  border: 5px dashed rgb(55,95,55);
+  margin: 50px 10px 20px 10px;
+}
 #home-p
 {
   background-color: rgb(138, 112, 94);
@@ -77,7 +89,7 @@ ul
   text-decoration: burlywood;
   padding: 50px;
 }
-#fishy
+.fishy
 {
   text-align: center;
 }
@@ -88,7 +100,7 @@ p
   font-family: 'Open Sans', sans-serif;
   font-size: 13pt;
 }
-#main-content
+.main-content
 {
   border: dashed 10px;
   padding: 25px;
